new structure and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .idea/
 __pycache__/
-polyline_image.py
 .ipynb_checkpoints/
-test.py
-tests_analysis.ipynb
-search_params.py
-Another method/
+testing_and_tuning/
+venv
